<resources>
    <string name="app_name">Currency converter</string>
    <string name="title_activity_settings">Settings</string>

    <string name="sans_serif">sans-serif</string>
    <string name="sans_serif_light">sans-serif-light</string>
    <string name="sans_serif_black">sans-serif-black</string>
    <string name="sans_serif_medium">sans-serif-medium</string>

    <string name="try_again_load">Try again to reload</string>
    <string name="loading_data">Loading data…</string>
    <string name="no_correct_load_data">Not correctly load data, please reload"</string>

    <!--activity_main.xml-->
    <string name="start_text_to_first_instructions">Select your base money to make all currency conversions</string>
    <string name="select_your_base_money">Select your base money</string>
    <string name="loading_currency_list_txt">Loading currency list…</string>

    <!--activity_select_money_conversions.xml-->
    <string name="default_selection_text">Your select money is EURO</string>
    <string name="input_value_money_instructions">Input value to convert with select money</string>
    <string name="select_money_txt">Your select money is %1$s</string>
    <string name="input_value_to_convert">Input value to convert with %1$s</string>

    <!-- share options strings -->
    <string name="share_chooser_title">Share app</string>
    <string name="share_message"> Download in Google Play: https://play.google.com/store/apps/details?id=amldev.currency</string>

    <!--Preferences-->
    <string name="select_language_pref_text">Select language</string>


    <string-array name="preference_language_strings_text">
        <item>@string/basque</item>
        <item>@string/spanish</item>
        <item>@string/english</item>
    </string-array>

    <string-array name="preferences_language_codes">
        <item>eu</item>
        <item>es</item>
        <item>en</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name ="settings_title">General options</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_contact">Contact</string>

    <string name="select_language_summary">The select language is %1$s .</string>

    <string name="pref_title_use_internet">Use internet to update currencies</string>
    <string name="pref_description_use_internet">Use internet to update money currencies today</string>

    <string name="pref_title_about_app">About app</string>
    <string name="pref_description_about_app">Currency converter created in Kotlin and Android by Anartz Mugika (mugan86@gmail.com)</string>

    <string name="pref_title_version_info">Version</string>
    <string name="pref_description_version_info">1.2 – 2017/09/22</string>

    <string name="pref_title_google_play_opinion">Give me your opinion!</string>
    <string name="pref_description_google_play_opinion">Click here to write your opinion on the application sheet!</string>

    <string name="pref_title_twitter">Twitter</string>
    <string name="pref_description_twitter">Follow me to have news about this app and other projects mine</string>

    <string name="more_info_app">More info about app</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate when we receive push notification </string>

</resources>
