<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:breadCrumbShortTitle="Test"
        android:fragment="amldev.currency.ui.fragments.settings.GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="amldev.currency.ui.fragments.settings.NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="amldev.currency.ui.fragments.settings.NotificationPreferenceFragment"
        android:icon="@drawable/ic_i18n"
        android:title="@string/select_language_pref_text" />

    <header
        android:fragment="amldev.currency.ui.fragments.settings.DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
